--- a/views/head.pug
+++ b/views/head.pug
@@ -6,6 +6,4 @@ meta(name="description", content="Node Web Console")
 meta(name="author", content="chriscindy (http://www.fecoding.cn)")
 meta(name="robots", content="none")
 //- style
-link(rel="stylesheet", href="vendor/normalize/normalize.css")
-link(rel="stylesheet", href="vendor/jquery.terminal/css/jquery.terminal-1.15.0.min.css")
-link(rel="stylesheet", href="css/webconsole.css")
+link(rel="stylesheet", href="index.css")
