--- a/views/head.pug
+++ b/views/head.pug
@@ -7,3 +7,4 @@ meta(name="author", content="chriscindy (http://www.fecoding.cn)")
 meta(name="robots", content="none")
 //- style
 link(rel="stylesheet", href="index.css")
+link(rel="icon", type="image/png", sizes="16x16" href="favicon.png")
