--- a/views/head.pug
+++ b/views/head.pug
@@ -6,5 +6,5 @@ meta(name="description", content="Node Web Console")
 meta(name="author", content="chriscindy (http://www.fecoding.cn)")
 meta(name="robots", content="none")
 //- style
-link(rel="stylesheet", href="index.css")
-link(rel="icon", type="image/png", sizes="16x16" href="favicon.png")
+link(rel="stylesheet", href="/static/index.css")
+link(rel="icon", type="image/png", sizes="16x16" href="/static/favicon.png")
