--- a/views/script.pug
+++ b/views/script.pug
@@ -1,9 +1,3 @@
-//- javascript
-//- script(src="vendor/jquery.terminal/js/jquery-1.7.1.min.js")
-//- script(src="vendor/jquery.terminal/js/jquery.mousewheel-min.js")
-//- script( src="vendor/jquery.terminal/js/jquery.terminal-1.15.0.min.js")
-//- script(src="vendor/jquery.terminal/js/jquery.terminal-src.js")
 script.
   var NO_LOGIN = #{NO_LOGIN}
-//- script(src="js/webconsole.js")
-script(src="index.js")
+script(src="static/index.js")
