update document title

--- a/views/head.pug
+++ b/views/head.pug
@@ -1,6 +1,6 @@
 meta(charset="utf-8")
-meta(http-equiv="X-UA-Compatible", content="IE=edge")/
-title Web Console
+meta(http-equiv="X-UA-Compatible", content="IE=edge")
+title Node Web Console
 meta(name="viewport", content="width=device-width, initial-scale=1")
 meta(name="description", content="Node Web Console")
 meta(name="author", content="chriscindy (http://www.fecoding.cn)")
